Sun Nov 11 03:07:04 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/funclib.c: there was a stupid string to translate

Sun Nov 11 00:14:04 2007  Jiri (George) Lebl <jirka@5z.com>

	* pixmaps/Makefile.am: add genius-graph.png to EXTRA_DIST

	* src/funclib.c: Implement DividePoly to divide polynomials
	  using long division.  This was one of those things that
	  I set aside to do "tommorrow" and it took close to a decade.

	* help/C/gel-function-list.xml: document DividePoly

	* configure.in: require GTK+ 2.4 (not 2.3.5 as previously)

	* NEWS: update

Sat Nov 10 16:58:14 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: migrate to GtkFontButton and add website addy
	  to about box

Sat Nov 10 16:22:09 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: optionally use GtkAboutDialog if we have GTK
	2.6 and higher

	* src/gnome-genius.c, src/genius.c, src/Makefile.am: better checking
	if we are in the development directory and if so, don't init binreloc
	and use the local lib.cgel

Sat Nov 10 13:51:26 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: fix fit dependent axis zoom for parametric plots

	* src/dict.[ch], src/gnome-genius.c, src/eval.c: Add names to
	  contexts and print these when showing local variables so that you
	  can see the "backtrace".  Also the display of vars is slightly
	  nicer now.

Thu Nov 08 00:51:16 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c, src/genius.c, src/funclib.c, src/plugin.c,
	  src/lexer.l, src/binreloc.[ch], acinclude.m4, src/Makefile.am:
	  add and use Binreloc code from autopackage to allow relocatable
	  executables.  Slightly massaged the code/auto* stuff to make it
	  work.

Mon Nov 05 01:31:51 2007  Jiri (George) Lebl <jirka@5z.com>

	* Makefile.am: add the INSTALL.MacOSX file to EXTRA_DIST

Mon Nov 05 00:15:09 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.[ch], src/mpwrap.[ch], src/funclib.c, src/genius.c,