@@ -1,3 +1,8 @@
+Sun Nov 11 03:17:49 2007  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: translate the author fields in the about box
+	  and set the program name correctly
+
 Sun Nov 11 03:07:04 2007  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/funclib.c: there was a stupid string to translate
